<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/action_settings"
        android:showAsAction="always"
        android:title="@string/set_decibels">
        <menu>
            <item
                android:id="@+id/max_decibel_level"
                android:title="@string/max_decibel_level"/>
            <item
                android:id="@+id/sound_countdown"
                android:title="@string/sound_countdown"/>
            <item
                android:id="@+id/sound_duration"
                android:title="@string/sound_duration"/>
            <item
                android:id="@+id/repeat_sound"
                android:checkable="true"
                android:title="@string/repeat_sound"/>
        </menu>
    </item>

</menu>