<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical" >

    <net.simonvt.numberpicker.NumberPicker
        android:id="@+id/numberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/illimited_button"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/p_dialog_box_right_button_ics"
            android:text="@string/illimited"
            android:visibility="gone" />

        <Button
            android:id="@+id/immediately_button"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/p_dialog_box_right_button_ics"
            android:text="@string/immediately"
            android:visibility="gone" />

        <Button
            android:id="@+id/ok_button"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/p_dialog_box_right_button_ics"
            android:text="@string/ok"
            android:visibility="gone" />

        <Button
            android:id="@+id/ok_button_full"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/p_dialog_box_right_button_ics"
            android:text="@string/ok"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>